--- a/sms/sms_app/templates/login_page.html
+++ b/sms/sms_app/templates/login_page.html
@@ -27,7 +27,7 @@
   <!-- /.login-logo -->
   <div class="card">
     <div class="card-body login-card-body">
-      <p class="login-box-msg">Sign in to Student Management System</p>
+      <p class="login-box-msg">Sign in to School Management System</p>
 
       <form action="/doLogin" method="post">
         {% csrf_token %}
