--- a/sms/sms_app/templates/hod_template/base_template.html
+++ b/sms/sms_app/templates/hod_template/base_template.html
@@ -94,7 +94,7 @@
 
   </div>
   <!-- /.content-wrapper -->
-     {% include 'hod_template/footer.html'}
+     {% include 'hod_template/footer.html' %}
 
 
 </div>
