--- a/sms/sms_app/templates/hod_template/home_content.html
+++ b/sms/sms_app/templates/hod_template/home_content.html
@@ -1,5 +1,6 @@
 {% extends 'hod_template/base_template.html' %}
 {% block main_content %}
+Home
 <!-- Main content -->
 <section class="content">
     <div class="container-fluid">
