--- a/sms/sms_app/templates/hod_template/sidebar_template.html
+++ b/sms/sms_app/templates/hod_template/sidebar_template.html
@@ -90,19 +90,29 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="/add_staff" class="nav-link">
+            <a href="/add_grade" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
-                add course
+                Add Grade
                 <span class="right badge badge-danger">New</span>
               </p>
             </a>
           </li>
           <li class="nav-item">
-            <a href="/add_staff" class="nav-link">
+            <a href="/add_class" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
-                manage course
+                Add Class
+                <span class="right badge badge-danger">New</span>
+              </p>
+            </a>
+          </li>
+
+          <li class="nav-item">
+            <a href="/add_grade" class="nav-link">
+              <i class="nav-icon fas fa-th"></i>
+              <p>
+                manage Grade
                 <span class="right badge badge-danger">New</span>
               </p>
             </a>
