--- a/sms/sms_app/templates/login_page.html
+++ b/sms/sms_app/templates/login_page.html
@@ -60,15 +60,16 @@
           <div class="col-12">
             <button type="submit" class="btn btn-primary btn-block">Sign In</button>
           </div>
-          {% if messages %}
-          <div class="col-12">
-            {% for message in messages %}
-            {% if message.tags == 'error' %}
-            <span class="aler alert-danger" style="margin-top: 10px;">{{ message }}</span>
-            {% endif %}
-            {% endfor %}
-          </div>
-          {% endif %}
+              <div class="form-group">
+              {% if messages %}
+               {% for message in messages %}
+               {% if message.tags == 'error' %}
+                <div class="alert alert-danger" style="margin-top: 10px;">{{ message }}</div>
+                {% endif %}
+                {% endfor %}
+               </div>
+              {% endif %}
+            </div> 
           <!-- /.col -->
         </div>
       </form>
