--- a/sms/sms_app/templates/hod_template/add_class_template.html
+++ b/sms/sms_app/templates/hod_template/add_class_template.html
@@ -1,6 +1,6 @@
 {% extends 'hod_template/base_template.html' %}
 {% block page_title %}
-Add Staff
+Add Class
 {% endblock page_title %}
 {% block main_content %}
     <!-- Main content -->
@@ -11,38 +11,18 @@ Add Staff
             <!-- general form elements -->
             <div class="card card-primary">
               <div class="card-header">
-                <h3 class="card-title">Add Staff</h3>
+                <h3 class="card-title">Add Class</h3>
               </div>
               <!-- /.card-header -->
               <!-- form start -->
-              <form role="form" action="/add_staff_save" method="post">
+              <form role="form" action="/add_class_save" method="post">
                   {% csrf_token %}
                 <div class="card-body">
                   <div class="form-group">
-                    <label>Email address</label>
-                    <input type="email" class="form-control" name="email" placeholder="Enter email">
-                  </div>
-                  <div class="form-group">
-                    <label>Password</label>
-                    <input type="password" class="form-control" placeholder="Password" name="password">
+                    <label>Class Name </label>
+                    <input type="text" class="form-control" name="Cname" placeholder="Enter Class">
                   </div>
                    <div class="form-group">
-                    <label>First Name</label>
-                    <input type="text" class="form-control" placeholder="First Name" name="first_name">
-                  </div>
-                   <div class="form-group">
-                    <label>Last Name</label>
-                    <input type="text" class="form-control" placeholder="Last Name" name="last_name">
-                  </div>
-                   <div class="form-group">
-                    <label>Username</label>
-                    <input type="text" class="form-control" placeholder="Username" name="username">
-                  </div>
-                  <div class="form-group">
-                    <label>Address</label>
-                    <input type="text" class="form-control" placeholder="Address" name="address">
-                  </div>
-                      <div class="form-group">
                       {% if messages %}
                         {% for message in messages %}
                         {% if message.tags == 'error' %}
@@ -59,7 +39,7 @@ Add Staff
                 <!-- /.card-body -->
 
                 <div class="card-footer">
-                  <button type="submit" class="btn btn-primary btn-block">Add Staff</button>
+                  <button type="submit" class="btn btn-primary btn-block">Add Class</button>
                 </div>
               </form>
             </div>
